add sampled embeddings